--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,12 @@
+main {
+    height: calc(100% - 90px);
+    margin-left: 200px;
+}
+
 .principal .quadrado {
     height: 250px;
     text-decoration: none;
-    justify-content: center !important; 
-
+    justify-content: center !important;
 }
 
 .principal .quadrado, .principal .bigger {
@@ -14,7 +18,6 @@
 }
 
 .principal {
-    width: 1400px;
     display: flex;
     flex-direction: column;
 }
